lab13/src/parser/PmmParser.java
// Generated from C:/Users/Marcos/Desktop/INFORMATICA/TERCERO/2/DLP/lab/Diseno-Lenguajes-Programacion/lab13/src/parser\Pmm.g4 by ANTLR 4.8
package parser;

    import ast.*;
    import ast.Program;
    import ast.definitions.Definition;
    import ast.definitions.FunctionDefinition;
    import ast.definitions.VariableDefinition;
    import ast.expresions.*;
    import ast.statements.*;
    import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, INT_CONSTANT=43, REAL_CONSTANT=44, 
		REAL=45, ID=46, CHAR_CONSTANT=47, COMMENT=48, MULTIPLE_COMMENT=49, WHITE_SPACE=50, 
		TAB=51, NEW_LINE=52, RET=53;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_function_definition = 2, RULE_function_type = 3, 
		RULE_variable = 4, RULE_parameters = 5, RULE_variable_definition = 6, 
		RULE_function_body = 7, RULE_type = 8, RULE_simple_type = 9, RULE_return_type = 10, 
		RULE_array = 11, RULE_struct_type = 12, RULE_struct_fields = 13, RULE_field = 14, 
		RULE_statement = 15, RULE_statements = 16, RULE_print = 17, RULE_input = 18, 
		RULE_return_statement = 19, RULE_assigment = 20, RULE_ifElse = 21, RULE_while_statement = 22, 
		RULE_expression = 23, RULE_invokeFunction = 24, RULE_expressions = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "function_definition", "function_type", "variable", 
			"parameters", "variable_definition", "function_body", "type", "simple_type", 
			"return_type", "array", "struct_type", "struct_fields", "field", "statement", 
			"statements", "print", "input", "return_statement", "assigment", "ifElse", 
			"while_statement", "expression", "invokeFunction", "expressions"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'def'", "'main'", "'('", "')'", "':'", "'{'", "'}'", "','", 
			"'int'", "'double'", "'char'", "'void'", "'['", "']'", "'struct'", "'+='", 
			"'-='", "'*='", "'/='", "'print'", "'input'", "'return'", "'='", "'if'", 
			"'else'", "'while'", "'!'", "'.'", "'*'", "'/'", "'%'", "'+'", "'-'", 
			"'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", null, null, 
			null, null, null, null, null, "' '", "'\t'", "'\n'", "'\r'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "INT_CONSTANT", "REAL_CONSTANT", 
			"REAL", "ID", "CHAR_CONSTANT", "COMMENT", "MULTIPLE_COMMENT", "WHITE_SPACE", 
			"TAB", "NEW_LINE", "RET"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public Function_definitionContext function_definition;
		public Variable_definitionContext variable_definition;
		public MainContext main;
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			ArrayList<Definition> defs = new ArrayList<Definition>();
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(60);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__1:
						{
						setState(53);
						((ProgramContext)_localctx).function_definition = function_definition();
						defs.add(((ProgramContext)_localctx).function_definition.ast);
						}
						break;
					case ID:
						{
						setState(56);
						((ProgramContext)_localctx).variable_definition = variable_definition();
						defs.addAll(((ProgramContext)_localctx).variable_definition.ast);
						setState(58);
						match(T__0);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(65);
			((ProgramContext)_localctx).main = main();
			defs.add(((ProgramContext)_localctx).main.ast);
			setState(67);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(0,0,defs);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token d;
		public Token m;
		public Function_bodyContext function_body;
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((MainContext)_localctx).d = match(T__1);
			setState(71);
			((MainContext)_localctx).m = match(T__2);
			setState(72);
			match(T__3);
			setState(73);
			match(T__4);
			setState(74);
			match(T__5);
			setState(75);
			match(T__6);
			setState(76);
			((MainContext)_localctx).function_body = function_body();
			setState(77);
			match(T__7);
			((MainContext)_localctx).ast =  new FunctionDefinition(((MainContext)_localctx).d.getLine(), ((MainContext)_localctx).d.getCharPositionInLine() + 1, (((MainContext)_localctx).m!=null?((MainContext)_localctx).m.getText():null), new FunctionType(((MainContext)_localctx).d.getLine(), ((MainContext)_localctx).d.getCharPositionInLine() + 1, new ArrayList<VariableDefinition>(), new VoidType(((MainContext)_localctx).d.getLine(), ((MainContext)_localctx).d.getCharPositionInLine() + 1)), ((MainContext)_localctx).function_body.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token d;
		public Token ID;
		public Function_bodyContext function_body;
		public ParametersContext p;
		public Function_typeContext function_type;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Function_typeContext function_type() {
			return getRuleContext(Function_typeContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterFunction_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitFunction_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunction_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_definition);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				((Function_definitionContext)_localctx).d = match(T__1);
				setState(81);
				((Function_definitionContext)_localctx).ID = match(ID);
				setState(82);
				match(T__3);
				setState(83);
				match(T__4);
				setState(84);
				match(T__5);
				setState(85);
				match(T__6);
				setState(86);
				((Function_definitionContext)_localctx).function_body = function_body();
				setState(87);
				match(T__7);
				((Function_definitionContext)_localctx).ast =  new FunctionDefinition(((Function_definitionContext)_localctx).d.getLine(), ((Function_definitionContext)_localctx).d.getCharPositionInLine() + 1, (((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null), new FunctionType(((Function_definitionContext)_localctx).d.getLine(), ((Function_definitionContext)_localctx).d.getCharPositionInLine()+1, new ArrayList<VariableDefinition>(), new VoidType(((Function_definitionContext)_localctx).d.getLine(), ((Function_definitionContext)_localctx).d.getCharPositionInLine()+1)), ((Function_definitionContext)_localctx).function_body.ast);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				((Function_definitionContext)_localctx).d = match(T__1);
				setState(91);
				((Function_definitionContext)_localctx).ID = match(ID);
				setState(92);
				match(T__3);
				setState(93);
				((Function_definitionContext)_localctx).p = parameters();
				setState(94);
				match(T__4);
				setState(95);
				match(T__5);
				setState(96);
				match(T__6);
				setState(97);
				((Function_definitionContext)_localctx).function_body = function_body();
				setState(98);
				match(T__7);
				((Function_definitionContext)_localctx).ast =  new FunctionDefinition(((Function_definitionContext)_localctx).d.getLine(), ((Function_definitionContext)_localctx).d.getCharPositionInLine() + 1, (((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null), new FunctionType(((Function_definitionContext)_localctx).d.getLine(), ((Function_definitionContext)_localctx).d.getCharPositionInLine()+1, ((Function_definitionContext)_localctx).p.ast, new VoidType(((Function_definitionContext)_localctx).d.getLine(), ((Function_definitionContext)_localctx).d.getCharPositionInLine()+1)), ((Function_definitionContext)_localctx).function_body.ast);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				((Function_definitionContext)_localctx).d = match(T__1);
				setState(102);
				((Function_definitionContext)_localctx).ID = match(ID);
				setState(103);
				((Function_definitionContext)_localctx).function_type = function_type();
				setState(104);
				match(T__6);
				setState(105);
				((Function_definitionContext)_localctx).function_body = function_body();
				setState(106);
				match(T__7);
				((Function_definitionContext)_localctx).ast =  new FunctionDefinition(((Function_definitionContext)_localctx).d.getLine(), ((Function_definitionContext)_localctx).d.getCharPositionInLine() + 1, (((Function_definitionContext)_localctx).ID!=null?((Function_definitionContext)_localctx).ID.getText():null), ((Function_definitionContext)_localctx).function_type.ast, ((Function_definitionContext)_localctx).function_body.ast);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_typeContext extends ParserRuleContext {
		public FunctionType ast;
		public Token c;
		public ParametersContext parameters;
		public Return_typeContext return_type;
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public Function_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterFunction_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitFunction_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunction_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_typeContext function_type() throws RecognitionException {
		Function_typeContext _localctx = new Function_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			((Function_typeContext)_localctx).c = match(T__3);
			setState(112);
			((Function_typeContext)_localctx).parameters = parameters();
			setState(113);
			match(T__4);
			setState(114);
			match(T__5);
			setState(115);
			((Function_typeContext)_localctx).return_type = return_type();
			((Function_typeContext)_localctx).ast =  new FunctionType(((Function_typeContext)_localctx).c.getLine(), ((Function_typeContext)_localctx).c.getCharPositionInLine() + 1, ((Function_typeContext)_localctx).parameters.ast, ((Function_typeContext)_localctx).return_type.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Variable ast;
		public Token ID;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			((VariableContext)_localctx).ID = match(ID);
			((VariableContext)_localctx).ast =  new Variable(((VariableContext)_localctx).ID.getLine(), ((VariableContext)_localctx).ID.getCharPositionInLine() + 1, (((VariableContext)_localctx).ID!=null?((VariableContext)_localctx).ID.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public Variable_definitionContext v1;
		public Variable_definitionContext v2;
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}
